--- a/8.3_basic_website.conf
+++ b/8.3_basic_website.conf
@@ -22,10 +22,31 @@ sudo nano /etc/apache2/sites-available/FlaskApp.conf - Creates Flask config file
 </VirtualHost>
 
 To enable config file:
-sudo a3ensite FlaskApp
+sudo a2ensite FlaskApp
 service apache2 reload
 
-[Resume video at 4 minutes]
+Configure wsgi file
+In var/www/FlaskApp
+sudo nano flaskapp.wsgi
+
+#!/usr.bin.python - Shebang line which tells the system what interpreter to use
+import sys
+import logging
+logging.basicConfig(stream=sys.stderr)
+sys.path.insert(0,"/var/www/FlaskApp/")
+
+from FlaskApp import app as application
+application.secret_key = 'm@R&nTp@l&j3NL0Rw@L'
+
+#application.secret_key = 'Add your secret key' - This is an important line - Ensure confidentiality
+#secret_key is a random string of characters that is used to encrypt the session cookie.
+#login details saved in cookie - if secret key is known can be decrypted - set their user as admin as example
+
+save file 
+service apache2 restart - to restart server to refresh __init__.py file
+could write a script to check __init__.py file for edits
+
+test by going to ipaddress:5000 in browser
 
 '''
 <VirtualHost *:80>
